Optimised for mobile  - Set viewport  - Fixed title size  - Fixed overflow-x

--- a/static/Styles/index.css
+++ b/static/Styles/index.css
@@ -8,8 +8,8 @@
 #title h1 {
 	font-size: min(10em, 14vw);
 	margin-top: calc(40px + 17vh);
-	margin-left: 16px;
-	margin-right: 16px;
+	margin-left: 1.2vw;
+	margin-right: 1.2vw;
 	margin-bottom: calc(35px + 24vh);
     /* text-align: center; */
 	display: inline-block;
